ui/rawui.nim

    when defined(useLibUiDll):
  when defined(windows):
    const
      dllName* = "libui.dll"
  elif defined(macosx):
    const
      dllName* = "libui.dylib"
  else:
    const
      dllName* = "libui.so"
  {.pragma: mylib, dynlib: dllName.}
else:
  {.pragma: mylib.}
  when defined(linux):
    # thanks to 'import math' missing linking flags are added
    import math
    from strutils import replace
    const cflags = (staticExec"pkg-config --cflags gtk+-3.0").replace('\L', ' ')
    const lflags = (staticExec"pkg-config --libs gtk+-3.0").replace('\L', ' ')
    {.passC: cflags.}
    {.passL: lflags.}

  {.compile: ("./libui/common/*.c", "common_$#.obj").}
  when defined(windows):
    {.compile: ("./libui/windows/*.cpp", "win_$#.obj").}
  elif defined(macosx):
    {.compile: ("./libui/darwin/*.m", "osx_$#.obj").}

    {.passL: "-framework OpenGL".}
    {.passL: "-framework CoreAudio".}
    {.passL: "-framework AudioToolbox".}
    {.passL: "-framework AudioUnit".}
    {.passL: "-framework Carbon".}
    {.passL: "-framework IOKit".}
    {.passL: "-framework Cocoa".}
  else:
    {.compile: ("./libui/unix/*.c", "unix_$#.obj").}
  when defined(gcc) and defined(windows):
    #{.passL: r"C:\Users\rumpf\projects\mingw64\x86_64-w64-mingw32\lib\liboleaut32.a".}
    {.passL: r"-lwinspool".}
    {.passL: r"-lcomdlg32".}
    {.passL: r"-ladvapi32".}
    {.passL: r"-lshell32".}
    {.passL: r"-lole32".}
    {.passL: r"-loleaut32".}

    {.passL: r"-luuid".}
    {.passL: r"-lcomctl32".}
    {.passL: r"-ld2d1".}
    {.passL: r"-ldwrite".}
    {.passL: r"-lUxTheme".}
    {.passL: r"-lUsp10".}
    {.passL: r"-lgdi32".}
    {.passL: r"-luser32".}
    {.passL: r"-lkernel32".}
    {.link: r"..\res\resources.o".}

  when defined(vcc):
    {.passC: "/EHsc".}
    when false:
      const arch = when defined(cpu32): "x86" else: "x64"
      {.link: r"C:\Program Files (x86)\Windows Kits\8.1\Lib\winv6.3\um\" & arch & r"\d2d1.lib".}
      {.link: r"C:\Program Files (x86)\Windows Kits\8.1\Lib\winv6.3\um\" & arch & r"\dwrite.lib".}
      {.link: r"C:\Program Files (x86)\Windows Kits\8.1\Lib\winv6.3\um\" & arch & r"\UxTheme.lib".}
      {.link: r"C:\Program Files (x86)\Windows Kits\8.1\Lib\winv6.3\um\" & arch & r"\Usp10.lib".}

    {.link: r"kernel32.lib".}
    {.link: r"user32.lib".}
    {.link: r"gdi32.lib".}
    {.link: r"winspool.lib".}
    {.link: r"comdlg32.lib".}
    {.link: r"advapi32.lib".}
    {.link: r"shell32.lib".}
    {.link: r"ole32.lib".}
    {.link: r"oleaut32.lib".}
    {.link: r"uuid.lib".}
    {.link: r"comctl32.lib".}

    {.link: r"d2d1.lib".}
    {.link: r"dwrite.lib".}
    {.link: r"UxTheme.lib".}
    {.link: r"Usp10.lib".}
    {.link: r"..\res\resources.res".}

import times

type
  ForEach* {.size: sizeof(cint).} = enum
    ForEachContinue,
    ForEachStop,

  InitOptions* = object
    size*: csize

{.deadCodeElim: on.}

proc init*(options: ptr InitOptions): cstring {.cdecl, importc: "uiInit",
    mylib.}
proc uninit*() {.cdecl, importc: "uiUninit", mylib.}
proc freeInitError*(err: cstring) {.cdecl, importc: "uiFreeInitError", mylib.}
proc main*() {.cdecl, importc: "uiMain", mylib.}
proc mainSteps*() {.cdecl, importc: "uiMainSteps", mylib.}
proc mainStep*(wait: cint): cint {.cdecl, importc: "uiMainStep", mylib.}
proc quit*() {.cdecl, importc: "uiQuit", mylib.}
proc queueMain*(f: proc (data: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiQueueMain", mylib.}

proc timer*(milliseconds: cint, f: proc (data: pointer): cint {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiTimer", mylib.}

proc onShouldQuit*(f: proc (data: pointer): cint {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiOnShouldQuit", mylib.}
proc freeText*(text: cstring) {.cdecl, importc: "uiFreeText", mylib.}
type
  Control* {.inheritable, pure.} = object
    signature*: uint32
    oSSignature*: uint32
    typeSignature*: uint32
    destroy*: proc (a2: ptr Control) {.cdecl.}
    handle*: proc (a2: ptr Control): int {.cdecl.}
    parent*: proc (a2: ptr Control): ptr Control {.cdecl.}
    setParent*: proc (a2: ptr Control; a3: ptr Control) {.cdecl.}
    toplevel*: proc (a2: ptr Control): cint {.cdecl.}
    visible*: proc (a2: ptr Control): cint {.cdecl.}
    show*: proc (a2: ptr Control) {.cdecl.}
    hide*: proc (a2: ptr Control) {.cdecl.}
    enabled*: proc (a2: ptr Control): cint {.cdecl.}
    enable*: proc (a2: ptr Control) {.cdecl.}
    disable*: proc (a2: ptr Control) {.cdecl.}



template toUiControl*(this: untyped): untyped =
  (cast[ptr Control]((this)))

proc controlDestroy*(a2: ptr Control) {.cdecl, importc: "uiControlDestroy",
                                    mylib.}
proc controlHandle*(a2: ptr Control): int {.cdecl, importc: "uiControlHandle",
                                       mylib.}
proc controlParent*(a2: ptr Control): ptr Control {.cdecl, importc: "uiControlParent",
    mylib.}
proc controlSetParent*(a2: ptr Control; a3: ptr Control) {.cdecl,
    importc: "uiControlSetParent", mylib.}
proc controlToplevel*(a2: ptr Control): cint {.cdecl, importc: "uiControlToplevel",
    mylib.}
proc controlVisible*(a2: ptr Control): cint {.cdecl, importc: "uiControlVisible",
    mylib.}
proc controlShow*(a2: ptr Control) {.cdecl, importc: "uiControlShow", mylib.}
proc controlHide*(a2: ptr Control) {.cdecl, importc: "uiControlHide", mylib.}
proc controlEnabled*(a2: ptr Control): cint {.cdecl, importc: "uiControlEnabled",
    mylib.}
proc controlEnable*(a2: ptr Control) {.cdecl, importc: "uiControlEnable",
                                   mylib.}
proc controlDisable*(a2: ptr Control) {.cdecl, importc: "uiControlDisable",
                                    mylib.}
proc allocControl*(n: csize; oSsig: uint32; typesig: uint32; typenamestr: cstring): ptr Control {.
    cdecl, importc: "uiAllocControl", mylib.}
proc freeControl*(a2: ptr Control) {.cdecl, importc: "uiFreeControl", mylib.}

proc controlVerifySetParent*(a2: ptr Control; a3: ptr Control) {.cdecl,
    importc: "uiControlVerifySetParent", mylib.}
proc controlEnabledToUser*(a2: ptr Control): cint {.cdecl,
    importc: "uiControlEnabledToUser", mylib.}
proc userBugCannotSetParentOnToplevel*(`type`: cstring) {.cdecl,
    importc: "uiUserBugCannotSetParentOnToplevel", mylib.}
type
  Window* = object of Control


template toUiWindow*(this: untyped): untyped =
  (cast[ptr Window]((this)))

proc windowTitle*(w: ptr Window): cstring {.cdecl, importc: "uiWindowTitle",
                                       mylib.}
proc windowSetTitle*(w: ptr Window; title: cstring) {.cdecl,
    importc: "uiWindowSetTitle", mylib.}
proc windowContentSize*(w: ptr Window; width: ptr cint; height: ptr cint) {.cdecl,
    importc: "uiWindowContentSize", mylib.}
proc windowSetContentSize*(w: ptr Window; width: cint; height: cint) {.cdecl,
    importc: "uiWindowSetContentSize", mylib.}
proc windowFullscreen*(w: ptr Window): cint {.cdecl, importc: "uiWindowFullscreen",
    mylib.}
proc windowSetFullscreen*(w: ptr Window; fullscreen: cint) {.cdecl,
    importc: "uiWindowSetFullscreen", mylib.}
proc windowOnContentSizeChanged*(w: ptr Window;
                                f: proc (a2: ptr Window; a3: pointer) {.cdecl.};
                                data: pointer) {.cdecl,
    importc: "uiWindowOnContentSizeChanged", mylib.}
proc windowOnClosing*(w: ptr Window;
                     f: proc (w: ptr Window; data: pointer): cint {.cdecl.};
                     data: pointer) {.cdecl, importc: "uiWindowOnClosing",
                                    mylib.}
proc windowBorderless*(w: ptr Window): cint {.cdecl, importc: "uiWindowBorderless",
    mylib.}
proc windowSetBorderless*(w: ptr Window; borderless: cint) {.cdecl,
    importc: "uiWindowSetBorderless", mylib.}
proc windowSetChild*(w: ptr Window; child: ptr Control) {.cdecl,
    importc: "uiWindowSetChild", mylib.}
proc windowMargined*(w: ptr Window): cint {.cdecl, importc: "uiWindowMargined",
                                       mylib.}
proc windowSetMargined*(w: ptr Window; margined: cint) {.cdecl,
    importc: "uiWindowSetMargined", mylib.}
proc newWindow*(title: cstring; width: cint; height: cint; hasMenubar: cint): ptr Window {.
    cdecl, importc: "uiNewWindow", mylib.}
type
  Button* = object of Control


template toUiButton*(this: untyped): untyped =
  (cast[ptr Button]((this)))

proc buttonText*(b: ptr Button): cstring {.cdecl, importc: "uiButtonText",
                                      mylib.}
proc buttonSetText*(b: ptr Button; text: cstring) {.cdecl, importc: "uiButtonSetText",
    mylib.}
proc buttonOnClicked*(b: ptr Button;
                     f: proc (b: ptr Button; data: pointer) {.cdecl.}; data: pointer) {.
    cdecl, importc: "uiButtonOnClicked", mylib.}
proc newButton*(text: cstring): ptr Button {.cdecl, importc: "uiNewButton",
                                        mylib.}
type
  Box* = object of Control


template toUiBox*(this: untyped): untyped =
  (cast[ptr Box]((this)))

proc boxAppend*(b: ptr Box; child: ptr Control; stretchy: cint) {.cdecl,
    importc: "uiBoxAppend", mylib.}
proc boxDelete*(b: ptr Box; index: cint) {.cdecl, importc: "uiBoxDelete", mylib.}
proc boxPadded*(b: ptr Box): cint {.cdecl, importc: "uiBoxPadded", mylib.}
proc boxSetPadded*(b: ptr Box; padded: cint) {.cdecl, importc: "uiBoxSetPadded",
    mylib.}
proc newHorizontalBox*(): ptr Box {.cdecl, importc: "uiNewHorizontalBox",
                                mylib.}
proc newVerticalBox*(): ptr Box {.cdecl, importc: "uiNewVerticalBox", mylib.}
type
  Checkbox* = object of Control


template toUiCheckbox*(this: untyped): untyped =
  (cast[ptr Checkbox]((this)))

proc checkboxText*(c: ptr Checkbox): cstring {.cdecl, importc: "uiCheckboxText",
    mylib.}
proc checkboxSetText*(c: ptr Checkbox; text: cstring) {.cdecl,
    importc: "uiCheckboxSetText", mylib.}
proc checkboxOnToggled*(c: ptr Checkbox;
                       f: proc (c: ptr Checkbox; data: pointer) {.cdecl.}; data: pointer) {.
    cdecl, importc: "uiCheckboxOnToggled", mylib.}
proc checkboxChecked*(c: ptr Checkbox): cint {.cdecl, importc: "uiCheckboxChecked",
    mylib.}
proc checkboxSetChecked*(c: ptr Checkbox; checked: cint) {.cdecl,
    importc: "uiCheckboxSetChecked", mylib.}
proc newCheckbox*(text: cstring): ptr Checkbox {.cdecl, importc: "uiNewCheckbox",
    mylib.}
type
  Entry* = object of Control


template toUiEntry*(this: untyped): untyped =
  (cast[ptr Entry]((this)))

proc entryText*(e: ptr Entry): cstring {.cdecl, importc: "uiEntryText", mylib.}
proc entrySetText*(e: ptr Entry; text: cstring) {.cdecl, importc: "uiEntrySetText",
    mylib.}
proc entryOnChanged*(e: ptr Entry; f: proc (e: ptr Entry; data: pointer) {.cdecl.};
                    data: pointer) {.cdecl, importc: "uiEntryOnChanged",
                                   mylib.}
proc entryReadOnly*(e: ptr Entry): cint {.cdecl, importc: "uiEntryReadOnly",
                                     mylib.}
proc entrySetReadOnly*(e: ptr Entry; readonly: cint) {.cdecl,
    importc: "uiEntrySetReadOnly", mylib.}
proc newEntry*(): ptr Entry {.cdecl, importc: "uiNewEntry", mylib.}
proc newPasswordEntry*(): ptr Entry {.cdecl, importc: "uiNewPasswordEntry",
                                  mylib.}
proc newSearchEntry*(): ptr Entry {.cdecl, importc: "uiNewSearchEntry", mylib.}
type
  Label* = object of Control


template toUiLabel*(this: untyped): untyped =
  (cast[ptr Label]((this)))

proc labelText*(label: ptr Label): cstring {.cdecl, importc: "uiLabelText",
                                        mylib.}
proc labelSetText*(label: ptr Label; text: cstring) {.cdecl, importc: "uiLabelSetText",
    mylib.}
proc newLabel*(text: cstring): ptr Label {.cdecl, importc: "uiNewLabel", mylib.}
type
  Tab* = object of Control


template toUiTab*(this: untyped): untyped =
  (cast[ptr Tab]((this)))
